Add string support